moved some types for API return using openapi with schema2code now, next fix is error handling in axum
